<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DreamBook</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dreaming_prompt">What Are You Dreaming Now?</string>
    <string name="main_title">DreamBook</string>
    <string name="forgot_pw_string">Forgot your password?</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="register_question">Don\'t have an account?</string>
    <string name="login_string">Login</string>
    <string name="register_link_string"><u>Sign up now!</u></string>
    <string name="reset_pw_link_string"><u>Reset your password</u></string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="register_title">Start Dreaming!</string>
    <string name="confirm_pw_string">Confirm Password</string>
    <string name="email_string">Email Address</string>
    <string name="submit_string">Submit</string>
    <string name="missing_reg_title">Missing Information</string>
    <string name="missing_reg_msg">Please fill out all of the information</string>
    <string name="umatch_pw_title">Invalid Passwords</string>
    <string name="umatch_pw_msg">Passwords have to match</string>
    <string name="bad_combination_title">Invalid Username/Password</string>
    <string name="bad_combination_msg">Usernames and Passwords must be at least 4 characters long</string>
    <string name="close_alert">Close</string>
    <string name="acc_created_title">Account Created Successfully!</string>
    <string name="acc_created_msg">An email has been sent to your email address. Please verify your account before you start.</string>
    <string name="reg_faila_msg">Account is already in use</string>
    <string name="reg_faile_msg">Email is already in use</string>
    <string name="reg_failu_msg">Username is already in use</string>
    <string name="reg_faili_msg">Invalid email address</string>
    <string name="reg_failo_msg">Email is already in use</string>
    <string name="reg_fail_title">Registration failed</string>
    <string name="x_string">X</string>
    <string name="reset_pw_string">Reset Password</string>
    <string name="reset_string">Reset</string>
    <string name="pswd_reset_title">Password Reset</string>
    <string name="pswd_reset_msg">An email has been sent with instructions on how to reset your password</string>
    <string name="error_reset_email">Invalid email address</string>
    <string name="error_reset_fail">Password reset failed</string>
    <string name="title_activity_main_lobby">MainLobby</string>
    <string name="error_login_title">Login failed</string>
    <string name="error_login_unexp">Sorry an unexpected error occured while trying to log you in. Please try again later.</string>
    <string name="error_login_combo">Invalid username/password combination</string>
    <string name="error_login_uname">Invalid username</string>
    <string name="error_login_pswd">Invalid password for the username</string>
    <string name="error_login_verif">Email is not verified</string>
    <string name="main_lobby_string">Main Lobby</string>
    <string name="string_submit_dream">Submit Dream</string>
    <string name="logout_string">Logout</string>
    <string name="logged_out_string">Logged out</string>
    <string name="logged_out_message">You have successfully logged out!!</string>
    <string name="dream_submit_title">Dream submitted successfully</string>
    <string name="dream_submit_message">Your dream has been submitted successfully!! Check all your dreams out by viewing the &quot;Dream Diary&quot;</string>
    <string name="title_activity_dream_diary">DreamDiary</string>
    <string name="dream_subject_hint">Enter dream subject</string>
    <string name="dream_text_hint">Enter dream</string>
    <string name="no_subject_string">No Subject</string>
    <string name="string_delim">:~:</string>
    <string name="title_activity_test_class">TestClass</string>
    <string name="view_dream_lobby_string">View your dream diary</string>
    <string name="submit_changes_string">Submit changes</string>
    <string name="edit_successful_title">Changes made successfully!</string>
    <string name="edit_successful_message">The changes you have made to this entry have been saved!</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="edit_confirm_title">Confirm edit</string>
    <string name="edit_confirm_message">Are you sure you want to make these changes?</string>
    <string name="edit_canceled_title">Edit cancelled</string>
    <string name="edit_canceled_message">Your recent changes have not been saved</string>
    <string name="login_progress_title">Logging in</string>
    <string name="login_progress_message" >Please be patient while we try to log you in...</string>
    <string name="splash_message_string">Explore your dreams! If you can remember them that is ;)</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>